--- a/styles/style.scss
+++ b/styles/style.scss
@@ -4,10 +4,8 @@ html,
 body {
   position: relative;
   height: 100%;
-}
-body {
   font-family: "Raleway", Helvetica Neue, Helvetica, Arial, sans-serif;
-  font-size: 14px;
+  font-size: 16px;
   font-weight: 200;
   margin: 0;
   padding: 0;
@@ -119,6 +117,65 @@ body {
     align-items: center;
   }
 }
+
+//////////////////oncube stuff
+
 .logo {
   transform: translateZ(10px);
+}
+
+.form-wrapper {
+  position: relative;
+  width: 80%;
+  height: 90%;
+  display: flex;
+  .form-over {
+    z-index: 2;
+    position: absolute;
+    left: 5rem;
+    top: 0;
+    bottom: 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    width: 20rem;
+    background-color: #494949;
+    padding: 1.5rem;
+    transform: translateZ(10px);
+    // box-shadow: 5px 5px 20px #0a0a0a71;
+    input,
+    textarea {
+      margin: 0.5rem;
+      background-color: #49494900;
+      border: 1px #cecece solid;
+      color: #f1f1f1;
+      &::placeholder {
+        color: #a5a5a5;
+        padding: 0.5rem;
+      }
+    }
+    input {
+      height: 2rem;
+    }
+  }
+  .form-under {
+    z-index: 1;
+    width: 100%;
+    height: 25rem;
+    align-self: center;
+    background-color: #2c2c2c;
+    color: #f1f1f1;
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+    transform: translateZ(10px);
+    h2 {
+      // align-self: center;
+      // float: right;
+      font-weight: 200;
+      padding-right: 3rem;
+      width: 9rem;
+      text-align: start;
+    }
+  }
 }
