--- a/styles/style.css
+++ b/styles/style.css
@@ -33,10 +33,6 @@ body {
   background: linear-gradient(0deg, #b87b11 0%, #feab1f 20%);
 }
 
-.profil-picture {
-  width: 20%;
-}
-
 #cube {
   position: absolute;
   top: 48%;
@@ -48,7 +44,6 @@ body {
 }
 
 .swiper-slide {
-  text-align: center;
   font-size: 18px;
   /* Center slide text vertically */
   display: -webkit-box;
@@ -81,7 +76,7 @@ body {
 .swiper-pagination-bullet {
   width: 180px;
   height: 50px;
-  text-align: center;
+  text-align: right;
   line-height: 50px;
   font-size: 1.7rem;
   color: white;
@@ -101,6 +96,7 @@ body {
 }
 
 .bg-outside {
+  z-index: -1;
   height: 100%;
   width: 100%;
   background-color: #f3a41d;
@@ -116,6 +112,7 @@ body {
 }
 
 .bg-outside .bg-inside {
+  z-index: 1;
   height: 90%;
   width: 90%;
   background-color: #131313;
@@ -136,6 +133,91 @@ body {
           transform: translateZ(10px);
 }
 
+.highlight {
+  color: #d63333;
+}
+
+.about-wrapper {
+  position: relative;
+  width: 90%;
+  height: 90%;
+}
+
+.about-wrapper .profil-picture {
+  margin: 10% 0 0 10%;
+  width: 30%;
+}
+
+.about-wrapper .about-under {
+  z-index: 1;
+  position: absolute;
+  height: 100%;
+  top: 0;
+  right: 10%;
+  background-color: #262626;
+}
+
+.about-wrapper .about-under .title {
+  font-family: "Open Sans", "Helvetica Neue", sans-serif;
+  position: relative;
+  top: 17%;
+  font-size: 1.8rem;
+  line-height: 1.5rem;
+}
+
+.about-wrapper .about-under .title h2 {
+  position: relative;
+  left: -20%;
+  font-weight: 100;
+}
+
+.about-wrapper .about-under .title h1 {
+  padding: 0 2rem 0 2rem;
+}
+
+.about-wrapper .about-over {
+  z-index: 2;
+  position: relative;
+  top: -10px;
+  -webkit-transform: translateZ(10px);
+          transform: translateZ(10px);
+  background-color: #363636;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.about-wrapper .about-over p {
+  width: 30%;
+  padding: 30px;
+  border-right: #fbfbfb 1px solid;
+}
+
+.about-wrapper .about-over .about-pic {
+  width: 200px;
+  min-height: 200px;
+  background-image: url(../images/leuchte.jpg);
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+}
+
+/* .pic-physical,
+.pic-digital {
+  width: 40%;
+  height: 60%;
+  background-size: cover;
+  margin: 20px;
+}
+.pic-digital {
+  background-image: url(../images/pexels-photo-669996.jpg);
+}
+.pic-physical {
+  background-image: url(../images/IMG_7486.JPG);
+} */
 .form-wrapper {
   position: relative;
   width: 80%;
@@ -143,14 +225,17 @@ body {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  background-color: #161616;
 }
 
-.form-wrapper .form-upper {
+.form-wrapper .form-over {
   z-index: 2;
   position: absolute;
-  left: 5rem;
+  width: 50%;
+  left: 10%;
   top: 0;
   bottom: 0;
+  background-color: #363636;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -161,56 +246,58 @@ body {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  width: 20rem;
-  background-color: #494949;
   padding: 1.5rem;
   -webkit-transform: translateZ(10px);
           transform: translateZ(10px);
 }
 
-.form-wrapper .form-upper input,
-.form-wrapper .form-upper textarea {
+.form-wrapper .form-over input,
+.form-wrapper .form-over textarea {
   margin: 0.5rem;
   background-color: #49494900;
   border: 1px #cecece solid;
   color: #f1f1f1;
 }
 
-.form-wrapper .form-upper input::-webkit-input-placeholder,
-.form-wrapper .form-upper textarea::-webkit-input-placeholder {
+.form-wrapper .form-over input::-webkit-input-placeholder,
+.form-wrapper .form-over textarea::-webkit-input-placeholder {
   color: #a5a5a5;
   padding: 0.5rem;
 }
 
-.form-wrapper .form-upper input:-ms-input-placeholder,
-.form-wrapper .form-upper textarea:-ms-input-placeholder {
+.form-wrapper .form-over input:-ms-input-placeholder,
+.form-wrapper .form-over textarea:-ms-input-placeholder {
   color: #a5a5a5;
   padding: 0.5rem;
 }
 
-.form-wrapper .form-upper input::-ms-input-placeholder,
-.form-wrapper .form-upper textarea::-ms-input-placeholder {
+.form-wrapper .form-over input::-ms-input-placeholder,
+.form-wrapper .form-over textarea::-ms-input-placeholder {
   color: #a5a5a5;
   padding: 0.5rem;
 }
 
-.form-wrapper .form-upper input::placeholder,
-.form-wrapper .form-upper textarea::placeholder {
+.form-wrapper .form-over input::placeholder,
+.form-wrapper .form-over textarea::placeholder {
   color: #a5a5a5;
   padding: 0.5rem;
 }
 
-.form-wrapper .form-upper input {
+.form-wrapper .form-over input {
   height: 2rem;
+}
+
+.form-wrapper .form-over #send-btn {
+  border-top: #d63333 solid 3px;
 }
 
 .form-wrapper .form-under {
   z-index: 1;
   width: 100%;
-  height: 25rem;
+  height: 70%;
   -ms-flex-item-align: center;
       align-self: center;
-  background-color: #2c2c2c;
+  background-color: #262626;
   color: #f1f1f1;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -230,5 +317,10 @@ body {
   padding-right: 3rem;
   width: 9rem;
   text-align: start;
+}
+
+.form-wrapper .form-under h2 span {
+  color: #d63333;
+  font-weight: bold;
 }
 /*# sourceMappingURL=style.css.map */
