--- a/styles/style.css
+++ b/styles/style.css
@@ -205,19 +205,42 @@ body {
   background-repeat: no-repeat;
 }
 
-/* .pic-physical,
-.pic-digital {
+.projects-bg {
+  z-index: 1;
+  width: 70%;
+  height: 60%;
+  position: absolute;
+  top: 10%;
+  background-color: #1b1b1b;
+}
+
+.physical,
+.digital {
+  z-index: 3;
   width: 40%;
   height: 60%;
-  background-size: cover;
-  margin: 20px;
+  padding: 3%;
 }
-.pic-digital {
-  background-image: url(../images/pexels-photo-669996.jpg);
+
+.physical img,
+.digital img {
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
 }
-.pic-physical {
-  background-image: url(../images/IMG_7486.JPG);
-} */
+
+.physical img::after,
+.digital img::after {
+  content: "Physical";
+  position: absolute;
+}
+
+.physical h3,
+.digital h3 {
+  text-align: center;
+}
+
 .form-wrapper {
   position: relative;
   width: 80%;
