--- a/styles/style.scss
+++ b/styles/style.scss
@@ -7,8 +7,9 @@
   font-family: "CeraLight";
   src: url("../fonts/CeraLight.otf") format("opentype");
 }
-$cubeWidth: 1000px;
-$cubeHeight: 700px;
+$cubeWidth: 1300px;
+$cubeHeight: 800px;
+$formBorder: #f4f4f4;
 
 html,
 body {
@@ -47,9 +48,8 @@ body {
 #cube {
   position: absolute;
   top: 48%;
-  right: 15%;
-  -ms-transform: translateY(-50%);
-  transform: translateY(-50%);
+  left: 55%;
+  transform: translate(-50%, -50%);
   width: $cubeWidth;
   height: $cubeHeight;
 }
@@ -73,7 +73,7 @@ body {
 
 .swiper-pagination {
   top: 15%;
-  left: 5%;
+  // left: 50px;
   display: flex;
   flex-direction: column;
 }
@@ -231,30 +231,43 @@ body {
     left: 10%;
     top: 0;
     bottom: 0;
-    background-color: #363636;
-
+    background-color: #1b1b1b;
+    border: 1px solid $formBorder;
     display: flex;
     flex-direction: column;
     justify-content: center;
-
     padding: 1.5rem;
-    // box-shadow: 5px 5px 20px #0a0a0a71;
+    font-size: 1.2rem;
+
+    label {
+      padding: 1rem;
+    }
     input,
     textarea {
       margin: 0.5rem;
-      background-color: #49494900;
-      border: 1px #cecece solid;
+      background-color: transparent;
+      border: none;
+      border-bottom: 1px $formBorder solid;
+      border-top: 1px $formBorder solid;
       color: #f1f1f1;
+      &:focus {
+        border: none;
+      }
       &::placeholder {
         color: #a5a5a5;
         padding: 0.5rem;
+        font-family: monospace;
       }
     }
     input {
-      height: 2rem;
+      line-height: 2rem;
     }
     #send-btn {
-      border-top: #d63333 solid 3px;
+      margin-top: 1rem;
+      border: none;
+      background-color: #813232;
+      border-radius: 4px;
+      cursor: pointer;
     }
   }
   .form-under {
@@ -262,7 +275,8 @@ body {
     width: 100%;
     height: 70%;
     align-self: center;
-    background-color: #262626;
+    border: 1px solid $formBorder;
+    // background-color: #262626;
     color: #f1f1f1;
     display: flex;
     align-items: center;
@@ -274,10 +288,6 @@ body {
       padding-right: 3rem;
       width: 9rem;
       text-align: start;
-      span {
-        color: #d63333;
-        font-weight: bold;
-      }
     }
   }
 }
@@ -301,5 +311,82 @@ body {
       color: #f1f1f1;
       transition: 0.3s;
     }
+  }
+}
+
+//viewport breakpoints
+@media (max-width: 1800px) {
+  #cube {
+    height: 700px;
+    width: 1100px;
+  }
+  .bg-inside {
+    height: calc(700px - 80px);
+    width: calc(1100px - 80px);
+  }
+}
+
+@media (max-width: 1400px) {
+  html {
+    font-size: 10px;
+  }
+  #cube {
+    height: 700px;
+    width: 950px;
+    left: 50%;
+  }
+  .bg-inside {
+    height: calc(700px - 80px);
+    width: calc(950px - 80px);
+  }
+  .swiper-pagination,
+  .social-links {
+    display: none;
+  }
+}
+
+@media (max-width: 992px) {
+  #cube {
+    height: 700px;
+    width: 750px;
+    left: 50%;
+  }
+  .bg-inside {
+    height: calc(700px - 80px);
+    width: calc(750px - 80px);
+  }
+  .swiper-pagination,
+  .social-links {
+    display: none;
+  }
+}
+@media (max-width: 768px) {
+  #cube {
+    height: 700px;
+    width: 550px;
+    left: 50%;
+  }
+  .bg-inside {
+    height: calc(700px - 80px);
+    width: calc(550px - 80px);
+  }
+  .swiper-pagination,
+  .social-links {
+    display: none;
+  }
+}
+@media (max-width: 576px) {
+  #cube {
+    height: 700px;
+    width: 480px;
+    left: 50%;
+  }
+  .bg-inside {
+    height: calc(700px - 80px);
+    width: calc(480px - 80px);
+  }
+  .swiper-pagination,
+  .social-links {
+    display: none;
   }
 }
