--- a/styles/style.css
+++ b/styles/style.css
@@ -220,6 +220,7 @@ body {
 }
 
 .project-intro .project-intro-info {
+  width: 50%;
   padding: 4rem;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -235,13 +236,10 @@ body {
 }
 
 .project-intro .project-intro-pic {
+  height: 100%;
   width: 50%;
-}
-
-.project-intro .project-intro-pic img {
-  max-height: 130%;
-  -o-object-fit: cover;
-     object-fit: cover;
+  background-image: url(../images/project-intro.JPG);
+  background-size: cover;
 }
 
 .moebel-1 {
