--- a/styles/style.scss
+++ b/styles/style.scss
@@ -193,6 +193,7 @@ body {
   flex-direction: row;
 
   .project-intro-info {
+    width: 50%;
     padding: 4rem;
     display: flex;
     flex-direction: column;
@@ -201,6 +202,7 @@ body {
     font-size: 1.4rem;
   }
   .project-intro-pic {
+    height: 100%;
     width: 50%;
     background-image: url(../images/project-intro.JPG);
     background-size: cover;
